# GrowthAssistant

./: .gitignore  DEPLOYMENT.md  README.md  app.py  make_minimal_project_dataset.py  pyproject.toml  render.yaml  requirements.txt
pgpb_pipeline/: README.md  Snakefile  pyproject.toml  requirements.txt
pgpb_pipeline/config/: config.yaml  samples.tsv  scoring.yaml
pgpb_pipeline/data/genomes/: strain_001.fna  strain_002.fna
pgpb_pipeline/mock_outputs/: expected_final_ranking.tsv
pgpb_pipeline/mock_outputs/strain_001/: amrfinder.tsv  annotation_summary.tsv  antismash.tsv  busco_short_summary.txt  checkm.tsv  crispr.tsv  dbcan.tsv  eggnog.tsv  phage.tsv  plasmid.tsv  quast_report.tsv  taxonomy.tsv  virulence.tsv
pgpb_pipeline/mock_outputs/strain_002/: amrfinder.tsv  annotation_summary.tsv  antismash.tsv  busco_short_summary.txt  checkm.tsv  crispr.tsv  dbcan.tsv  eggnog.tsv  phage.tsv  plasmid.tsv  quast_report.tsv  taxonomy.tsv  virulence.tsv
pgpb_pipeline/results/reports/: final_report.html  final_report.md  strain_001.html  strain_001.md  strain_002.html  strain_002.md
pgpb_pipeline/results/tables/: amr_summary.tsv  annotation_summary.tsv  bacteriocin_summary.tsv  bgc_summary.tsv  biosafety_summary.tsv  cazy_summary.tsv  crispr_summary.tsv  database_evidence_summary.tsv  external_database_evidence.tsv  final_ranking.tsv  (+10 more)
pgpb_pipeline/scripts/: aggregate_results.py  make_report.py  score_strains.py  validate_inputs.py
pgpb_pipeline/tests/: test_external_evidence.py  test_parsers.py  test_pgp_traits.py  test_scoring.py
pgpb_pipeline/workflow/: Snakefile
(+75 files in other folders)
