[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plant-bacteria-match"
version = "0.1.0"
description = "MVP assistant for PGPR/PGPB bacterial candidate ranking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "pydantic>=2.5",
    "streamlit>=1.31",
    "plotly>=5.18",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1", "black>=23.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

